--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.16.1",
     "mongoose": "^5.5.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.11"
   }
 }
